--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,3 @@
-
 /* MIXINS */
 
 /* transition mixin */
@@ -222,7 +221,7 @@ body {
             border: 1px solid rgba(0,0,0,.15);
             border-radius: .25rem;
 
-            &.ng-invalid {
+            &..ng-dirty.ng-invalid {
                 background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23f0ad4e' d='M4.4 5.324h-.8v-2.46h.8zm0 1.42h-.8V5.89h.8zM3.76.63L.04 7.075c-.115.2.016.425.26.426h7.397c.242 0 .372-.226.258-.426C6.726 4.924 5.47 2.79 4.253.63c-.113-.174-.39-.174-.494 0z'/%3E%3C/svg%3E");
                 border-color: #f0ad4e;
                 padding-right: 2.25rem;
